--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=DevOscarAbel2A
 server.port = 8080
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=C##OSCARABEL
-spring.datasource.password=123456
+spring.datasource.username=SECCION_2A
+spring.datasource.password=2A1234
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
